# meshpi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  meshpi.service  pyproject.toml  requirements.txt
installers/: install-linux.sh  install-macos.sh  install-windows.ps1  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
locks/: linux.txt  macos.txt  requirements.in  windows.txt
meshpi/: __init__.py  __main__.py  cli.py  client.py  config.py  connect_tui.py  connections.py  daemon.py  database.py  doctor.py  events.py  ipc.py  lifecycle.py  models.py  node_actions.py  packet.py  platform_service.py  service.py  signing.py  tui.py  update.py
scripts/: prepare_release.py
tests/: test_cli.py  test_config_ipc.py  test_connect_tui.py  test_connections.py  test_database.py  test_docs.py  test_doctor.py  test_installers.py  test_lifecycle.py  test_models.py  test_node_actions.py  test_packet.py  test_platform_service.py  test_service.py  test_tui.py  test_update.py
website/: .htaccess  README.md  index.html  script.js  styles.css  version.json
