[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "meshpi"
version = "0.5.7"
description = "Ein stabil Meshtastic-klient for terminalen"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "meshtastic==2.7.11",
    "prompt-toolkit==3.0.52",
    "textual==8.2.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<10",
    "pytest-cov>=5,<8",
]
dev = [
    "meshpi[test]",
    "cryptography>=45,<47",
    "ruff>=0.12,<1",
]

[project.scripts]
meshpi = "meshpi.cli:main"

[tool.setuptools.packages.find]
include = ["meshpi*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["UP017", "UP042"]
